Updated project to use Spring Boot 3.0
Resolves issues:
TASK-810
TASK-812
TASK-813